--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>                    
-    <header class="header"> 
+    <header class="header">  
         <div class="container header-inner"> 
             <nav class="main-nav">
                 <a href="./index.html" class="logo">Web<span>Studio</span></a>
@@ -36,8 +36,65 @@
                     <li class="contact-info-item"><a href="tel:+380961111111" class="contact-info-link">+11 (000) 111-11-11</a></li>
                 </ul>  
             </address>  
+            <button type="button" class="burger-menu menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+                <svg class="icon-burger-menu" width="32" height="22"><use href="./images/icons.svg#icon-charm_menu-hamburger"></use></svg> 
+            </div>
+            <div class="js-menu-container">
+                <button type="button" class="js-close-menu">
+                    <svg class="close-icon" width="8" height="8">
+                        <use href="./images/icons.svg#icon-close"></use>
+                    </svg>
+                </button>
+                <ul class="menu">
+                    <li class="menu-item">
+                        <a href="./index.html" class="menu-link">Studio</a>
+                    </li>
+                    <li class="menu-item active">
+                        <a href="./portfolio.html" class="menu-link">Portfolio</a>
+                    </li>
+                    <li class="menu-item">
+                        <a href="" class="menu-link">Contacts</a>
+                    </li>
+                </ul>
+                <div class="js-menu-container-bottom">
+                    <address>
+                        <ul class="contact-info">
+                            <li class="contact-info-item">
+                                <a href="tel:+380961111111" class="contact-info-link contact-info-tel">+11 (000) 111-11-11</a>
+                            </li>
+                            <li class="contact-info-item">
+                                <a href="mailto:info@devstudio.com" class="contact-info-link">info@devstudio.com</a>
+                            </li>
+                           
+                        </ul>  
+                    </address>
+                    <ul class="social-icon-container footer-icon-container">
+                        <li class="social-media-item">
+                            <a class="social-link" href="#">
+                                <svg class="icon" width="24" height="24"><use href="./images/icons.svg#icon-instagram"></use></svg>
+                            </a>
+                        </li>
+                        <li class="social-media-item">
+                            <a class="social-link" href="#">
+                                <svg class="icon" width="24" height="24"><use href="./images/icons.svg#icon-twitter"></use></svg>
+                            </a>
+                        </li>
+                        <li class="social-media-item">
+                            <a class="social-link" href="#">
+                                <svg class="icon" width="24" height="24"><use href="./images/icons.svg#icon-facebook"></use></svg>
+                            </a>
+                        </li>
+                        <li class="social-media-item">
+                            <a class="social-link" href="#">
+                                <svg class="icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-linkedin"></use></svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-    </header> 
+    </header>  
     <main>
         <section class="projects">
             <div class="container">
@@ -228,5 +285,6 @@
             </div>
         </div>
     </footer>
+    <script src="./js/mobile-menu.js"></script>
 </body>
 </html>
